# landscapes

./: .gitmodules  CMakeLists.txt  README.md
media/: landscapes.scene.json
shaders/: DebugPlane.hlsl  FrustumCulling.hlsli  GBufferVisualization.hlsl  LandscapeShaders.hlsl  TerrainHelpers.hlsli  TerrainShaders.h  TerrainShaders.hlsl  landscape_shaders.hlsl  shaders.cfg  shaders.hlsl
shaders/Debug/: GBufferVisualization.hlsl
shaders/Shared/: DebugTools.h  TerrainShaders.h  ViewEx_cb.h
shaders/Terrain/: TerrainHelpers.hlsli  TerrainShaders.h  TerrainShaders.hlsl
shaders/Terrain/tessellation/: Dispatcher.hlsl  Subdivision.hlsl  SumReduction.hlsl
source/: LandscapesApplication.cpp  LandscapesApplication.h  LandscapesScene.cpp  LandscapesScene.h  UserInterface.cpp  UserInterface.h  basic_triangle.cpp  basic_triangle.h  landscapes_application.cpp  landscapes_application.h  landscapes_scene.cpp  landscapes_scene.h  main.cpp  user_interface.cpp  user_interface.h
source/engine/: LandscapesSceneGraph.cpp  LandscapesSceneGraph.h  SceneGraphEx.cpp  SceneGraphEx.h  ViewEx.cpp  ViewEx.h
source/passes/: GBufferVisualizationPass.cpp  GBufferVisualizationPass.h  TerrainDrawStrategy.cpp  TerrainDrawStrategy.h  TerrainPass.cpp  TerrainPass.h  TerrainTessellationPass.cpp  TerrainTessellationPass.h  terrain_draw_strategy.cpp  terrain_pass.cpp  terrain_pass.h
source/render/: TerrainDrawStrategy.cpp  TerrainDrawStrategy.h
source/render/passes/: DebugPasses.cpp  DebugPasses.h  GBufferVisualizationPass.cpp  GBufferVisualizationPass.h  TerrainPass.cpp
source/terrain/: Terrain.cpp  Terrain.h  TerrainTessellation.cpp  TerrainTessellation.h  TerrainTessellationPass.h  terrain_mesh.cpp  terrain_mesh.h  terrain_tree.cpp  terrain_tree.h
